2014-08-26  Csaba Osztrogonác  <ossy@webkit.org>

        [EFL] URTBF after r172966.

        * UIProcess/efl/WebViewEfl.h:

2014-08-26  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        REGRESSION(r172966) [GTK] Build broken.

        Unreviewed build fix after r172966.

        * UIProcess/API/gtk/PageClientImpl.cpp:
        (WebKit::PageClientImpl::didSameDocumentNavigationForMainFrame):
        * UIProcess/API/gtk/PageClientImpl.h:

2014-08-26  Simon Fraser  <simon.fraser@apple.com>

        Crashes in hit testing under WebPage::determinePrimarySnapshottedPlugIn()
        https://bugs.webkit.org/show_bug.cgi?id=136240
        rdar://problem/17231462

        Reviewed by Darin Adler.
        
        determinePrimarySnapshottedPlugIn() does render tree hit testing, so needs
        to ensure that layout is up-to-date.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::determinePrimarySnapshottedPlugIn):

2014-08-26  Tim Horton  <timothy_horton@apple.com>

        REGRESSION (r172771): Amazon product page becomes unresponsive after swiping back to it
        https://bugs.webkit.org/show_bug.cgi?id=136260
        <rdar://problem/18107826>

        Reviewed by Dan Bernstein.

        Previously, when a swipe ended up performing a same-document navigation,
        we would never get didFinishLoadForMainFrame nor didFirstVisuallyNonEmptyLayoutForMainFrame
        nor would we even get didHitRenderTreeSizeThreshold in all cases, so we would never
        remove the swipe snapshot. Previous implementations removed the snapshot on
        didSameDocumentNavigation for the main frame if the navigation type was Replace or Pop,
        so we will match that behavior.

        Also, reinstate the watchdog that starts at swipe-end which would have prevented
        this bug from forever breaking the view it was associated with.

        Also, defend against removing the snapshot before the swipe has finished (before