@@ -1,3 +1,14 @@
+2014-08-26  Dana Burkart  <dburkart@apple.com>
+
+        The UNUSED_PARAM macros in ServicesOverlayController.mm are causing ASan build failures.
+        https://bugs.webkit.org/show_bug.cgi?id=136262
+
+        Reviewed by David Kilzer.
+
+        * WebProcess/WebPage/mac/ServicesOverlayController.mm:
+        (WebKit::ServicesOverlayController::selectionRectsDidChange):
+        (WebKit::ServicesOverlayController::selectedTelephoneNumberRangesChanged):
+
 2014-08-26  Csaba Osztrogonác  <ossy@webkit.org>
 
         [EFL] URTBF after r172966.
